[metadata]
name = emptool
author = Singein
author-email = singein@outlook.com
summary = Easy MicroPython toolchain
license = MIT
description-file =
    README.rst
home-page = https://github.com/Easy-MicroPython
requires-python = >= 3.4
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages = 
    emptool
    
[entry_points]
console_scripts =
    emptool = emptool.cli:main

